fix: align the button in the translation form

--- a/views/scss/inc/_section-container.scss
+++ b/views/scss/inc/_section-container.scss
@@ -231,9 +231,16 @@
         .translations-create {
             padding-top: 8px;
 
-            label { padding-inline-end: 0; }
-            select { margin-inline-start: 16px; }
-            button { margin-inline-start: 16px; }
+            label {
+                padding-inline-end: 0;
+            }
+            select {
+                margin-inline-start: 16px;
+            }
+            button {
+                margin-inline-start: 16px;
+                margin-bottom: 3px;
+            }
         }
         .translations-list {
             padding-top: 16px;
